# Othello

./: CMakeLists.txt  README  game.h  main.cpp  othello.cpp  othello.h
