PROJECT(Othello)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMakeModules/")

ADD_EXECUTABLE(othello main.cpp othello.h othello.cpp game.h game.cpp)

FIND_PACKAGE(OpenGL REQUIRED QUIET)
FIND_PACKAGE(FREEGLUT REQUIRED QUIET)

INCLUDE_DIRECTORIES( othello ${FREEGLUT_INCLUDE_DIR} )
TARGET_LINK_LIBRARIES( othello ${FREEGLUT_LIBRARY} )

INCLUDE_DIRECTORIES( othello ${OPENGL_INCLUDE_DIR} )
TARGET_LINK_LIBRARIES( othello ${OPENGL_LIBRARIES} )

